# blog_app

./: .gitignore  db.sqlite3  pyproject.toml
scripts/: start_app.sh
src/blog_app/: main.py
src/blog_app/backend/: main.py
src/blog_app/backend/api_v1/: __init__.py
src/blog_app/backend/api_v1/articles/: crud.py  dependencies.py  schemas.py  views.py
src/blog_app/backend/core/: config.py
src/blog_app/backend/core/models/: __init__.py  articles.py  base.py  db_helper.py
src/blog_app/backend/crud/: articles.py
src/blog_app/backend/schemas/: articles.py
src/blog_app/backend/utils/: templating.py
src/blog_app/backend/views/: home.py
src/blog_app/frontend/static/css/: style.css
src/blog_app/frontend/templates/: index.html
